--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,9 @@
       </h1>
     </div>
 
+  <%# エラーメッセージの表示 %>
+  <%= render 'shared/error_messages', model: f.object %>
+  <%# //エラーメッセージの表示 %>
 
     <div class="form-group">
       <div class="form-text-wrap">
