Googleのサインインボタンの追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,8 @@
 
 <%= form_with model: @user, url: user_registration_path, method: :post, id: 'new_user', class: 'registration-main', local: true do |f| %>
   
+  <%= link_to image_tag("btn_google_signin_light_normal_web@2x.png", class:"google-sign-in"), "#" %>
+  
   <div class="form-wrap">
     <div class="form-header">
       <h1 class="form-header-text">
