コメントアウトでの説明追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @user, url: user_registration_path, method: :post, id: 'new_user', class: 'registration-main', local: true do |f| %>
   
   <%= link_to image_tag("btn_google_signin_light_normal_web@2x.png", class:"google-sign-in"), "#" %>
-  
+
   <div class="form-wrap">
     <div class="form-header">
       <h1 class="form-header-text">
@@ -15,6 +15,7 @@
   <%= render 'shared/error_messages', model: f.object %>
   <%# //エラーメッセージの表示 %>
 
+    <%# 各フォーム入力 %>
     <div class="form-group">
       <div class="form-text-wrap">
         <label class="form-text">ニックネーム</label>
@@ -121,6 +122,8 @@
     </div>
     <p class='register-info'>本人情報の登録について</p>
   </div>
+    <%# //各フォーム入力 %>
+    
 <% end %>
 
 <%= render "shared/second-footer" %>
