--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,17 @@
     <%# 各フォーム入力 %>
     <div class="form-group">
       <div class="form-text-wrap">
+        <label class="form-text">プロフィール画像</label>
+        <span class="indispensable">任意</span>
+      </div>
+      <p>
+          クリックしてファイルをアップロード
+      </p>
+        <%= f.file_field :avatar, class:"input-default", id:"avatar" %>
+    </div>
+
+    <div class="form-group">
+      <div class="form-text-wrap">
         <label class="form-text">ニックネーム</label>
         <span class="indispensable">必須</span>
       </div>
