--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -24,7 +24,7 @@
           個展の説明
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_area :room_introduction, class:"items-text", id:"item-info", placeholder:"個展の説明（必須 1,000文字まで)" ,rows:"7" ,maxlength:"1000" %>
+        <%= f.text_area :room_introduction, class:"rooms-text", id:"room-info", placeholder:"個展の説明（必須 1,000文字まで)" ,rows:"7" ,maxlength:"1000" %>
       </div>
     </div>
     <%# //個展名と個展の説明 %>
