--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -15,6 +15,10 @@
 
 <%= form_with model: @item, url: room_items_path, method: :post, id: 'new_item', class: 'item-main', local: true do |f| %>
 
+  <%# エラーメッセージの表示 %>
+  <%= render 'shared/error_messages', model: f.object %>
+  <%# //エラーメッセージの表示 %>
+
   <%# 作品追加フォーム %>
   <div class="new-items">
         <div class="weight-bold-text">
@@ -56,6 +60,42 @@
         </div>
   </div>
   <%# //作品追加フォーム %>
+
+  <%# 追加した作品の一覧 %>
+  <div class="maked-items">
+    <ul class="item-lists">
+      <% @items.each do |item| %>
+        <li class="list">
+          <%= link_to "#" do %>
+            <div class="item-img-content">
+              <%if item.item_image.attached?%>
+              <%= image_tag item.item_image, class: "item-img" %>
+              <%end%>
+            </div>
+            <div class="item-info">
+              <h3 class="item-name">
+                <%= item.item_name %>
+              </h3>
+              <h3 class="item-introduction">
+                <%= item.item_introduction %>
+              </h3>
+            </div>
+            <%# priceがある作品だけ表示する %>
+            <% if item.price != nil %>
+              <div class="item-price-content">
+                <h4 class="item-price">
+                  <%= item.price %>
+                </h4>
+              </div>
+            <% end %>
+            <%# //priceがある作品だけ表示する %>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  <%# //追加した作品の一覧 %>
+
 <% end %>
 
 <%= render "shared/footer" %>
