--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -69,7 +69,7 @@
     <ul class="item-lists">
       <% @items.each do |item| %>
         <li class="list">
-          <%= link_to "#" do %>
+          <%= link_to "/rooms/#{@room.id}/items/#{item.id}" do %>
             <div class="item-img-content">
               <%if item.item_image.attached?%>
               <%= image_tag item.item_image, class: "item-img" %>
