--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -8,25 +8,7 @@
     <ul class="room-lists">
       <% @rooms.first(3).each do |room| %>
         <% if room.status == "released" %>
-          <li class=list>
-            <%= link_to room_path(room) do %>
-              <div class="room-img-content">
-                <%= image_tag room.room_image, class: "room-img" %>
-              </div>
-              <div class="room-info">
-                <h3 class="room-name">
-                  <%= room.room_name %>
-                </h3>
-                <h3 class="artist-name">
-                  <%= room.user.nickname %>
-                </h3>
-              </div>
-              <div class="like-count-sum">
-                <%= image_tag "like.png", class: "like-icon" %>
-                <span class="like-count"><%= room.liked_users.count %></span>
-              </div>
-            <% end %>
-          </li>
+          <%= render partial: "shared/room_list", locals: {room: room} %>
         <% end %>
       <% end %>
       <div class="more-rooms">
