--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
       <%# ログインの有無で表示が変わる %>
       <% if user_signed_in? %>
        <li><%= link_to '個展の作成', new_room_path, class: "create-room" %></li>
-       <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+       <li><%= link_to current_user.nickname, user_path(current_user.id), class: "user-nickname" %></li>
        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
       <% else %>
        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
