お気に入りの個展ページのリンク設定

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
   <div class="left-contents">
     <ul class="left-lists">
       <li><%= link_to '個展の作成', new_room_path, class: "create-room" %></li>
-      <li><%= link_to 'お気に入りの個展', "#", class: "like-room" %></li>
+      <li><%= link_to 'お気に入りの個展', "/users/like/#{params[:id]}", class: "like-room" %></li>
       <li><%= link_to 'プロフィール', "/users/profile/#{params[:id]}", class: "my-profile" %></li>
       <li><%= link_to 'ガイド', "#", class: "app-guide" %></li>
       <li><%= link_to 'お問い合わせ', "#", class: "contact-service" %></li>
@@ -47,7 +47,7 @@
         <% end %>
       <% end %>
     </ul>
-  </div>
+</div>
 <%# //ユーザーの個展一覧 %>
 
 
