--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,7 +6,9 @@
     <h1 class="room-name"><%= @room.room_name %></h1>
   </div>
   <div class="room-img-content">
+    <%if @room.room_image.attached?%>
     <%= image_tag @room.room_image, class: "room-img" %>
+    <%end%>
   </div>
   <div class="room-introduction-content">
     <p class="room-introduction"><%= @room.room_introduction %></p>
