--- a/app/views/shared/_room_list.html.erb
+++ b/app/views/shared/_room_list.html.erb
@@ -1,7 +1,9 @@
 <li class=list>
   <%= link_to room_path(room) do %>
     <div class="room-img-content">
+      <%if room.room_image.attached?%>
       <%= image_tag room.room_image, class: "room-img" %>
+      <% end %>
       <% if room.status == "nonreleased" %>
         <p>非公開</p>
       <% end %>
