--- a/app/views/shared/_room_list.html.erb
+++ b/app/views/shared/_room_list.html.erb
@@ -2,7 +2,12 @@
   <%= link_to room_path(room) do %>
     <div class="room-img-content">
       <%if room.room_image.attached?%>
-      <%= image_tag room.room_image, class: "room-img" %>
+        <%= image_tag room.room_image, class: "room-img" %>
+      <% else %>
+        <div class="no-img-box">
+          <p class="no-img">LIEN.</p>
+        </div>
+        <%# <%= image_tag "no-image.jpg", class: "no-img" %>
       <% end %>
       <% if room.status == "nonreleased" %>
         <p>非公開</p>
