--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,16 +1,15 @@
 <div class="footer">
-  <div class="footer-left">
-    <%= image_tag "logo-icon.png", class: "lien-icon-footer"%>
+  <div class="footer-links">
+    <%= link_to "TOP", "#", class: "footer-btn"%>
   </div>
-  <div class="footer-right">
-    <div class="footer-right-top">
-      <%= link_to "お問い合わせ", "#", class: "contact-us"%>
-      <%= link_to "利用規約", "#", class: "terms-of-service" %>
-    </div>
-    <div class="footer-right-under">
-      <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-icon"), "#" %>
-      <%= link_to image_tag("dl-android.png", class:"android-icon"), "#" %>
-    </div>
+  <div class="footer-link">
+    <%= link_to "CONTACT", "#", class: "footer-btn" %>
+  </div>
+  <div class="footer-link">
+    <%= link_to "NEWS", "#", class: "footer-btn"%>
+  </div>
+  <div class="footer-link">
+    <%= link_to "ABOUT", "#", class: "footer-btn"%>
   </div>
 </div>
-<p>©︎ LIEN </p>
+<p class="copyright">©copyright LIEN.,LTD.ALL rights reserved. </p>
