--- a/app/assets/stylesheets/rooms/index.css
+++ b/app/assets/stylesheets/rooms/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Moon";
-  src: asset_url('Moon Light.otf') format("truetype");
+  src: asset_url('Moon_Light.otf') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
