--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="background-wrapper">
 <%= render "shared/header" %>
 
 <div class="my-page-wrap">
@@ -68,3 +69,4 @@
 </div>
 
 <%= render "shared/footer" %>
+</div>
