個展作成ページのhtml修正

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,69 +1,78 @@
+<div class="background-wrapper">
+<%= render "shared/header" %>
 
 <%= form_with model: @room, method: :post, id: 'new_room', class: 'room-main', local: true do |f| %>
 
   <div class="form-wrap">
-    <div class="form-header">
-      <h1 class="form-header-text">
-        新規個展登録
-      </h1>
-    </div>
-
     <%# エラーメッセージの表示 %>
     <%= render 'shared/error_messages', model: f.object %>
     <%# //エラーメッセージの表示 %>
+    <div class="form-header">
+      <h1 class="form-header-text">
+        LIEN.
+      </h1>
+    </div>
 
-    <%# 個展名と個展の説明 %>
-    <div class="new-rooms">
-      <div class="weight-bold-text">
-        個展名
-        <span class="indispensable">必須</span>
-      </div>
-      <%= f.text_area :room_name, class:"rooms-text", id:"room-name", placeholder:"個展名（必須 40文字まで)", maxlength:"40" %>
-      <div class="items-explain">
+    <div class="form-create-room">
+
+      <%# 個展ポスター画像 %>
+      <div class="room-img-upload">
         <div class="weight-bold-text">
-          個展の説明
-          <span class="indispensable">必須</span>
+          個展ポスター画像
         </div>
-        <%= f.text_area :room_introduction, class:"rooms-text", id:"room-info", placeholder:"個展の説明（必須 1,000文字まで)" ,rows:"7" ,maxlength:"1000" %>
+        <div class="click-upload">
+          <label>
+            <div class="form-image-box">
+              <%= image_tag "no-image.jpg" , class: "image-btn" %>
+              <p>クリックしてファイルをアップロード</p>
+            </div>
+            <%= f.file_field :room_image, class: "room-file" , id:"room-image" %>
+          </label>
+        </div>
       </div>
-    </div>
-    <%# //個展名と個展の説明 %>
+      <%# //個展ポスター画像 %>
 
-    <%# 個展ポスター画像 %>
-    <div class="rooom-img-upload">
-      <div class="weight-bold-text">
-        個展ポスター画像
-        <span class="indispensable">任意</span>
+      <%# 個展名と個展の説明 %>
+      <div class="new-rooms">
+        <div class="room-form-box">
+          <div class="weight-bold-text">
+            個展名
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.text_area :room_name, class:"room-text", id:"room-name", placeholder:"個展名（必須 40文字まで)", maxlength:"40" %>
+        </div>
+        <div class="room-form-box">
+          <div class="weight-bold-text">
+            個展の説明
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.text_area :room_introduction, class:"room-text", id:"room-info", placeholder:"個展の説明（必須 1,000文字まで)" ,rows:"7" ,maxlength:"1000" %>
+        </div>
       </div>
-      <div class="click-upload">
-        <p>
-          クリックしてファイルをアップロード
-        </p>
-        <%= f.file_field :room_image, id:"room-image" %>
-      </div>
-    </div>
-    <%# //個展ポスター画像 %>
+      <%# //個展名と個展の説明 %>
 
-    <%# 個展ジャンル %>
-    <div class="rooom-img-upload">
-      <div class="weight-bold-text">
-        ジャンル
-        <span class="indispensable">必須(複数選択可)</span>
+      <%# 個展ジャンル %>
+      <div class="room-check-box">
+        <div class="weight-bold-text">
+          ジャンル
+          <span class="indispensable">必須(複数選択可)</span>
+          <p>
+            該当するジャンルにチェックを入れてください
+          </p>
+        </div>
+          <% ["絵画","テキスタイル","写真","彫刻","書道"].each do |genres| %>
+            <%= f.check_box :genre, {multiple: true}, genres, nil %>
+            <%= genres %>
+          <% end %>
       </div>
-      <div class="click-upload">
-        <p>
-          該当するジャンルにチェックを入れてください
-        </p>
-        <% ["絵画","テキスタイル","写真","立体","書道"].each do |genres| %>
-          <%= f.check_box :genre, {multiple: true}, genres, nil %>
-          <%= genres %>
-        <% end %>
+      <%# 個展ジャンル %>
+      <div class="sell-btn-contents">
+        <%= f.submit "作品の登録へ" ,class:"sell-btn" %>
       </div>
-    </div>
-    <%# 個展ジャンル %>
-    <div class="sell-btn-contents">
-      <%= f.submit "作品の登録へ" ,class:"sell-btn" %>
-      <%=link_to 'もどる', root_path, class:"back-btn" %>
-    </div>
+      </div>
   </div>
+  
 <% end %>
+
+<%= render "shared/footer" %> 
+</div>
