--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,31 +1,37 @@
+<div class="background-wrapper">
 <%= render "shared/header" %>
-<h1>プロフィール</h1>
 
-<%= link_to "マイページへ戻る", user_path(current_user.id), class: "move-to-mypage" %>
+  <div class="redirect-to">
+    <%= link_to "マイページへ戻る", user_path(current_user.id), class: "redirect-to-mypage" %>
+  </div>
+  <div class="profile-wrap">
+    <div class="title-profile">
+      <h1>プロフィール</h1>
+    </div>
 
-<div class="user-info-no-change">
-  <div class="user-info-contents">
-    <h4 class="user-info"> <%= "プロフィール画像" %> </h4>
-    <%if @user.avatar.attached?%>
-    <%= image_tag @user.avatar, class: "user-avatar" %>
-    <% end %>
+    <div class="user-profile-info">
+      <div class="user-profile-img">
+        <%if @user.avatar.attached?%>
+        <%= image_tag @user.avatar, class: "user-avatar-profile" %>
+        <% end %>
+      </div>
+      <div class="user-profile-contents">
+        <h4 class="user-profile"> <%= "お名前" %> </h4>
+        <p> <%= "#{@user.first_name}  #{@user.last_name}" %> </p>
+      </div>
+      <div class="user-profile-contents">
+        <h4 class="user-profile"> <%= "フリガナ" %> </h4>
+        <p> <%= "#{@user.first_name_kana}  #{@user.last_name_kana}" %> </p>
+      </div>
+      <div class="user-profile-contents">
+        <h4 class="user-profile"> <%= "生年月日" %> </h4>
+        <p> <%= "#{@user.birth}" %> </p>
+      </div>
+      <div class="user-profile-contents">
+        <h4 class="user-profile"> <%= "メールアドレス" %> </h4>
+        <p> <%= "#{@user.email}" %> </p>
+      </div>
+    </div>
   </div>
-  <div class="user-info-contents">
-    <h4 class="user-info"> <%= "お名前" %> </h4>
-    <p> <%= "#{@user.last_name}  #{@user.first_name}" %> </p>
-  </div>
-  <div class="user-info-contents">
-    <h4 class="user-info"> <%= "フリガナ" %> </h4>
-    <p> <%= "#{@user.last_name_kana}  #{@user.first_name_kana}" %> </p>
-  </div>
-  <div class="user-info-contents">
-    <h4 class="user-info"> <%= "生年月日" %> </h4>
-    <p> <%= "#{@user.birth}" %> </p>
-  </div>
-  <div class="user-info-contents">
-    <h4 class="user-info"> <%= "メールアドレス" %> </h4>
-    <p> <%= "#{@user.email}" %> </p>
-  </div>
-</div>
 
 <%= render "shared/footer" %>
