--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,27 +1,44 @@
 <%= render "shared/header" %>
 
 <%# 個展情報 %>
-<div class="room-info">
-  <div class="room-name-content">
-    <h1 class="room-name"><%= @room.room_name %></h1>
-  </div>
-  <div class="room-introduction-content">
-    <p class="room-introduction"><%= @room.room_introduction %></p>
+<div class="room-info-wrap">
+  <div class="room-img-content">
+    <%if @room.room_image.attached?%>
+      <%= image_tag @room.room_image, class: "room-img-show" %>
+    <% else %>
+      <div class="no-img-box">
+        <p class="no-img">LIEN.</p>
+      </div>
+    <% end %>
+    <div class="like-btn-box">
+      <% if user_signed_in? && current_user.already_liked?(@room) %>
+        <%= button_to room_like_path(@room), method: :delete, class: "like-btn" do%>
+          <%= image_tag "like_red.png", class: "like-delete-btn"%>
+        <% end %>
+      <% else %>
+        <%= button_to room_likes_path(@room) do %>
+          <%= image_tag "like_white.png", class: "like-delete-btn"%>
+        <% end %>
+      <% end %>
+    </div>
   </div>
   <% if user_signed_in? && @room.user_id == current_user.id %>
-  <div class="room-show-btn">
-    <%= link_to '個展の編集', new_room_item_path(@room), class:'room-show' %>
-  </div>
-  <% end %>
-  <div class="like-counts">
-    <h3>お気に入り件数: <%= @room.likes.count %></h3>
-  </div>
-  <div class="like-btn">
-    <% if user_signed_in? && current_user.already_liked?(@room) %>
-      <%= button_to 'お気に入り解除', room_like_path(@room), method: :delete %>
-    <% else %>
-      <%= button_to 'お気に入りに追加', room_likes_path(@room) %>
+    <div class="room-edit-btn">
+      <%= link_to new_room_item_path(@room), class:'room-edit' do%>
+        <%= image_tag "edit_room.png", class: "room-edit-btn"%>
+      <% end %>
+    </div>
     <% end %>
+  <div class="room-info-show">
+    <div class="room-name-content">
+      <h1 class="room-name-show"><%= @room.room_name %></h1>
+    </div>
+    <div class="room-user-name">
+      <%= link_to @room.user.nickname, user_path(@room.user), class: "user-page" %>
+    </div>
+    <div class="room-introduction-content">
+      <p class="room-introduction"><%= @room.room_introduction %></p>
+    </div>
   </div>
 </div>
 <%# 個展情報 %>
@@ -49,7 +66,7 @@
             <% if item.price != nil %>
               <div class="item-price-content">
                 <h4 class="item-price">
-                  <%= item.price %>
+                  <%= "¥#{item.price}" %>
                 </h4>
               </div>
             <% end %>
@@ -60,7 +77,9 @@
     </ul>
   </div>
 <%# 作品の一覧 %>
-<%=link_to 'もどる', "javascript:history.back()", class:"back-btn" %>
+<div class="back-page">
+<%=link_to 'Back', "javascript:history.back()", class:"back-btn" %>
+</div>
 
 
 <%= render "shared/footer" %>
