--- a/app/assets/stylesheets/rooms/new.css
+++ b/app/assets/stylesheets/rooms/new.css
@@ -21,10 +21,10 @@
 }
 
 .form-create-room {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   width: 60vw;
   background-color: #f5f5f5;
   padding: 10vh 0;
@@ -76,6 +76,7 @@
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+  border-radius: 1vh;
 }
 
 .image-btn {
