--- a/app/assets/stylesheets/shared/second-header.css
+++ b/app/assets/stylesheets/shared/second-header.css
@@ -1,7 +1,6 @@
 .second-header {
-  width: 100vw;
-  height: 17vh;
-  background-color: #f5f5f5;
+  height: 15vh;
+  background-color: #2a2a2a;
   display: flex;
   align-items: center;
   justify-content: center;
