--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,3 @@
 <header class="second-header">
-  <%= link_to image_tag("logo-icon.png", class:"second-logo"), "/" %>
+  <%= link_to "LIEN.", root_path, class:"lien-icon" %>
 </header>
