セカンドフッターのレイアウト調整

--- a/app/views/shared/_second-footer.html.erb
+++ b/app/views/shared/_second-footer.html.erb
@@ -1,8 +1,8 @@
 <footer class='second-fotter'>
+  <%= link_to "LIEN.", root_path, class:"lien-icon" %>
   <div class='second-fotter-text-wrap'>
-    <p class='second-fotter-text'>プライバシーポリシー</p>
-    <p class='second-fotter-text'>LIEN利用規約</p>
-    <p class='second-fotter-text'>特定商取引に関する表記</p>
+    <span class='second-fotter-text'>プライバシーポリシー</span>
+    <span class='second-fotter-text'>LIEN利用規約</span>
+    <span class='second-fotter-text'>特定商取引に関する表記</span>
   </div>
-  <%= image_tag "logo-icon.png", class:"second-fotter-logo"%>
 </footer>
